--- a/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.zh-Hans.xlf
+++ b/Pixiv_Wallpaper_for_Windows_10/MultilingualResources/Pixiv_Wallpaper_for_Windows_10.zh-Hans.xlf
@@ -256,6 +256,10 @@
           <source>Recommended illustration queue has been updated</source>
           <target state="translated">推荐插画队列已更新</target>
         </trans-unit>
+        <trans-unit id="EmptyQueue" translate="yes" xml:space="preserve">
+          <source>There's not more content in this collection</source>
+          <target state="new">There's not more content in this collection</target>
+        </trans-unit>
       </group>
     </body>
   </file>
